--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,9 +6,10 @@ spring:
     url: jdbc:mysql://192.168.99.136/dianCan?characterEnconding=utf-8&useSSL=false
   jpa:
     show-sql: true
+#  jackson:
+#    default-property-inclusion: non_null
 server:
   context-path: /dianCan
-
 
 
 
